Fixed backface-visibility bug for firefox

--- a/src/app/card/card.component.css
+++ b/src/app/card/card.component.css
@@ -26,6 +26,7 @@
 }
 
 .card .card-front {
+    transform: rotateX(0deg);
     font-size: 5rem;
 }
 
